<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <View
            android:id="@+id/colorPreview"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:layout_margin="3dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="22dp"
                    android:layout_margin="2dp"
                    android:text="@string/red"
                    android:textAlignment="textEnd" />

                <SeekBar
                    android:id="@+id/bgColorRSeekBar"
                    android:layout_width="0dp"
                    android:layout_height="26dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/bgColorRField"
                    android:layout_width="30dp"
                    android:layout_height="22dp"
                    android:layout_margin="2dp"
                    android:textAlignment="textEnd" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="22dp"
                    android:layout_margin="2dp"
                    android:text="@string/green"
                    android:textAlignment="textEnd" />

                <SeekBar
                    android:id="@+id/bgColorGSeekBar"
                    android:layout_width="0dp"
                    android:layout_height="26dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/bgColorGField"
                    android:layout_width="30dp"
                    android:layout_height="22dp"
                    android:layout_margin="2dp"
                    android:textAlignment="textEnd" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="22dp"
                    android:layout_margin="2dp"
                    android:text="@string/blue"
                    android:textAlignment="textEnd" />

                <SeekBar
                    android:id="@+id/bgColorBSeekBar"
                    android:layout_width="0dp"
                    android:layout_height="26dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/bgColorBField"
                    android:layout_width="30dp"
                    android:layout_height="22dp"
                    android:layout_margin="2dp"
                    android:textAlignment="textEnd" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/basic_colors"
        android:textSize="16sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/color01Button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/white"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/color02Button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/silver"
                android:text="@string/silver"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/color03Button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/gray"
                android:text="@string/gray"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/color04Button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="@string/black"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/color05Button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/red"
                android:text="@string/red"
                android:textColor="@color/black"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/color06Button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/maroon"
                android:text="@string/maroon"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/color07Button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:text="@string/yellow"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/color08Button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/olive"
                android:text="@string/olive"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/color09Button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/lime"
                android:text="@string/lime"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/color10Button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/green"
                android:text="@string/green"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/color11Button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/aqua"
                android:text="@string/aqua"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/color12Button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/teal"
                android:text="@string/teal"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/color13Button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:text="@string/blue"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/color14Button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/navy"
                android:text="@string/navy"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/color15Button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/fuchsia"
                android:text="@string/fuchsia"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/color16Button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/purple"
                android:text="@string/purple"
                android:textColor="@color/white" />
        </TableRow>
    </TableLayout>
</LinearLayout>